<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.StartActivity">

    <data>

    </data>


    <LinearLayout
        android:id="@+id/rl_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@color/lightGray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_solid_white">


            <TextView
                android:id="@+id/tv_content"
                style="@style/TextViewKR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center"
                android:lines="3"
                android:text="@string/sure_to_delete"
                android:textColor="@android:color/black"

                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/cl_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content">
                <!--app:setDialogButtonHeight066="@{title}"-->

                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    style="@style/TextViewKR"
                    android:gravity="center"
                    android:text="@string/remove"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_cancle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    style="@style/TextViewKR"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:background="@color/borderGray"

                    app:layout_constraintBottom_toTopOf="@+id/btn_ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <View
                    android:layout_width="1px"
                    android:layout_height="0dp"
                    android:background="@color/borderGray"

                    app:layout_constraintTop_toTopOf="@+id/btn_ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>